--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.4.3",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-flickity-component": "^3.6.2",
     "react-icons": "^4.4.0",
+    "react-native-svg": "^12.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
