--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-flickity-component": "^3.6.2",
     "react-icons": "^4.4.0",
     "react-native-svg": "^12.3.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "simple-react-modal": "^0.5.1",
