--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.4.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-flickity-component": "^3.6.2",
     "react-icons": "^4.4.0",
     "react-native-svg": "^12.3.0",
